--- a/WindowsSpecification.vbproj
+++ b/WindowsSpecification.vbproj
@@ -80,6 +80,13 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collectors\HardwareInfoCollector.vb" />
+    <Compile Include="Collectors\LicenseInfoCollector.vb" />
+    <Compile Include="Collectors\MainCollector.vb" />
+    <Compile Include="Collectors\NetworkInfoCollector.vb" />
+    <Compile Include="Collectors\SecurityInfoCollector.vb" />
+    <Compile Include="Collectors\SoftwareInfoCollector.vb" />
+    <Compile Include="Collectors\SystemInfoCollector.vb" />
     <Compile Include="Forms\ProgressForm.Designer.vb">
       <DependentUpon>ProgressForm.vb</DependentUpon>
     </Compile>
@@ -93,6 +100,7 @@
       <DependentUpon>WinSpecForm.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Helpers\CSVWriterHelper.vb" />
     <Compile Include="Helpers\IniFileHelper.vb" />
     <Compile Include="Helpers\NetworkHelper.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
