Rename project to SysCollect Pro and update branding
- Updated project name from "WindowsSpecification" to "SysCollect Pro" across all relevant files.
- Changed copyright information in `WinSpecForm.Designer.vb` to reflect "Flontive" and the year 2025.
- Modified `MyApplication` class to enforce single instance mode.
- Updated developer contact information to reflect the new organization name "Flontive."
- Revised assembly attributes in `AssemblyInfo.vb` with new title, description, and copyright.
- Added `app.manifest` to define application identity and UAC privileges.
- Updated `Resources.Designer.vb` and `Settings.Designer.vb` for new project name and versioning.
- Created new solution and project files for "SysCollect Pro" with necessary references.
- Updated `StatusStrip1` text in `WinSpecForm.Designer.vb` to match new branding.
- Modified `Application.myapp` to set the main form and single instance settings.
- Replaced `WindowsSpecification.vbproj` with `SysCollect Pro.vbproj` including updated references.

--- a/SysCollect Pro.vbproj
+++ b/SysCollect Pro.vbproj
@@ -6,9 +6,9 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{962CB51F-6AB7-4184-8667-7AFA66AFCCF4}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>WindowsSpecification.My.MyApplication</StartupObject>
-    <RootNamespace>WindowsSpecification</RootNamespace>
-    <AssemblyName>WindowsSpecification</AssemblyName>
+    <StartupObject>SysCollectPro.My.MyApplication</StartupObject>
+    <RootNamespace>SysCollectPro</RootNamespace>
+    <AssemblyName>SysCollect Pro</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
@@ -22,7 +22,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>WindowsSpecification.xml</DocumentationFile>
+    <DocumentationFile>SysCollect Pro.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -32,7 +32,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>WindowsSpecification.xml</DocumentationFile>
+    <DocumentationFile>SysCollect Pro.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -49,6 +49,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>WindowsSpecificationIcon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -135,6 +138,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="My Project\app.manifest" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
